--- a/advanced_topics.qmd
+++ b/advanced_topics.qmd
@@ -262,6 +262,7 @@ combined_plot
 ```{r}
 #| label: projections-pdf
 #| echo: false
+#| fig-cap: "Plots of four different Coordinate Reference Systems for the continental United States"
 combined_plot & theme(plot.title = element_text(size = 9))
 ```
 :::
@@ -556,6 +557,7 @@ plot
 #| label: pums-langauge-all-US-plot-pdf
 #| echo: false
 #| fig-height: 7
+#| fig-cap: "Proportion of speakers by language across the US by PUMA for English, Spanish, French, and Navajo"
 plot
 ```
 :::
@@ -686,6 +688,7 @@ plot
 #| label: pums-langauge-chicagoland-plot-pdf
 #| echo: false
 #| fig-height: 5
+#| fig-cap: "Proportion of speakers by language in the Chicago by PUMA for English, Polish, and Spanish"
 plot +
   scale_x_continuous(
     breaks = seq(-86, -89, by = -0.5)
@@ -750,7 +753,7 @@ plot <- puma_by_langauge |>
   theme(legend.position = "bottom") +
   labs(
     title = "Proportion of speakers by language",
-    subtitle = "in the Northeast"
+    subtitle = "in the Northeast by PUMA"
   )
 ```
 
@@ -767,6 +770,7 @@ plot + facet_wrap(vars(language), ncol = 4)
 #| label: pums-langauge-northeast-plot-pdf
 #| echo: false
 #| fig-height: 9
+#| fig-cap: "Proportion of speakers by language in the Northeast by PUMA for English, French, Portuguese, and Spanish"
 plot + facet_wrap(vars(language), ncol = 2)
 ```
 :::
