A few more clean ups

--- a/datasets.qmd
+++ b/datasets.qmd
@@ -502,17 +502,23 @@ pums_by_year_location_age <- open_dataset(
 
 The table below shows how many files in each dataset, as well as the minimum, maximum, and median file size.
 
-+---------------------------+-------------+-----------+--------------+-------------+--------------+-----------+
+::: {.content-visible when-format="html"}
 | Dataset                   | \# of Files | Min size  | 1st Quartile | Median size | 3rd Quartile | Max size  |
-+===========================+=============+===========+==============+=============+==============+===========+
+|---------------------------|------------:|----------:|-------------:|------------:|-------------:|----------:|
 | pums_one_big_file         | 1           | 7786.3 MB | 7786.3 MB    | 7786.3 MB   | 7786.3 MB    | 7786.3 MB |
-+---------------------------+-------------+-----------+--------------+-------------+--------------+-----------+
-| pums_by_year              | 34          | 0.1MB     | 0.1MB        | 211.8MB     | 459.9 MB     | 493MB     |
-+---------------------------+-------------+-----------+--------------+-------------+--------------+-----------+
-| pums_by_year_location     | 1785        | 0.1MB     | 0.1MB        | 0.1MB       | 6.02MB       | 56.1MB    |
-+---------------------------+-------------+-----------+--------------+-------------+--------------+-----------+
-| pums_by_year_location_age | 14124       | 0.1MB     | 0.1MB        | 0.4MB       | 1.09MB       | 17.6MB    |
-+---------------------------+-------------+-----------+--------------+-------------+--------------+-----------+
+| pums_by_year              | 34          | 0.1 MB    | 0.1 MB       | 211.8 MB    | 459.9 MB     | 493 MB    |
+| pums_by_year_location     | 1785        | 0.1 MB    | 0.1 MB       | 0.1 MB      | 6.02 MB      | 56.1 MB   |
+| pums_by_year_location_age | 14124       | 0.1 MB    | 0.1 MB       | 0.4 MB      | 1.09 MB      | 17.6 MB   |
+:::
+
+::: {.content-visible when-format="pdf"}
+| Dataset                   | \# of Files | Min size  | Median size | Max size  |
+|---------------------------|------------:|----------:|------------:|----------:|
+| pums_one_big_file         | 1           | 7786.3 MB | 7786.3 MB   | 7786.3 MB |
+| pums_by_year              | 34          | 0.1 MB    | 211.8 MB    | 493 MB    |
+| pums_by_year_location     | 1785        | 0.1 MB    | 0.1 MB      | 56.1 MB   |
+| pums_by_year_location_age | 14124       | 0.1 MB    | 0.4 MB      | 17.6 MB   |
+:::
 
 ```{r}
 #| eval: false
