--- a/advanced_topics.qmd
+++ b/advanced_topics.qmd
@@ -156,7 +156,9 @@ For example, arrow has historically had better dplyr support than duckdb because
 On the other hand, Acero does not currently have a SQL interface.
 But there is no technical limitations preventing duckdb from improving dplyr support---and by the time you are reading this, they very well may have![^duckplyr]---nor from there being a SQL interface to arrow.
 
-[^duckplyr: Indeed, see [duckplyr](https://duckdblabs.github.io/duckplyr/).]
+[^duckplyr]: Indeed, see
+[[duckplyr](https://duckdblabs.github.io/duckplyr/).]{.content-visible when-format="html"}
+[duckplyr: https://duckdblabs.github.io/duckplyr/.]{.content-visible when-format="pdf"}
 
 For most applications, you could use either arrow or duckdb just fine.
 But, if you do encounter cases where one package supports something the other doesn't, the smooth integration between arrow and duckdb means can leverage the best of both.
@@ -219,7 +221,7 @@ library(ggplot2)
 library(dplyr)
 library(patchwork) # For combining multiple ggplot objects
 
-# Define a function to create a plot with a given 
+# Define a function to create a plot with a given
 # CRS and parallel gridlines
 create_plot <- function(us_sf, crs, title) {
   us_transformed <- st_transform(us_sf, crs)
@@ -373,14 +375,14 @@ When this book was being written, there were already nascent projects to make th
 Today, however, we need to do a couple more things before we can work with it further and use `sf` and `ggplot2` to plot this: make sure that our CRS is set correctly and pulling the data into R.
 To do both of these, we create a helper function.
 This helper function ensures that we use the CRS we saw the data had above.
-It also sets the bounding box and center so that the entirety of the United States is laid out correctly.[^2]
+It also sets the bounding box and center so that the entirety of the United States is laid out correctly.[^alaska]
 Finally, we pull the data into R and set the correct geometry column to use.
 
 ```{r}
 #| label: correct-projection
 correct_projection <- function(PUMA, crs = "NAD83") {
   PUMA_df <- collect(PUMA)
-  # set the geometry column, but we also need to manually 
+  # set the geometry column, but we also need to manually
   # extract the CRS from the geoparquet metadata
   PUMA_df <- sf::st_sf(PUMA_df, sf_column_name = "geometry",
                        crs = crs)
@@ -391,11 +393,11 @@ correct_projection <- function(PUMA, crs = "NAD83") {
     "+proj=aea",
     "+lat_1=29.5",
     "+lat_2=45.5",
-    "+lat_0=23", 
+    "+lat_0=23",
     "+lon_0=-96",
     "+x_0=0",
     "+y_0=0",
-    "+ellps=GRS80", 
+    "+ellps=GRS80",
     "+towgs84=0,0,0,0,0,0,0",
     "+units=m +no_defs"
   )
@@ -407,10 +409,10 @@ correct_projection <- function(PUMA, crs = "NAD83") {
 
 ### Enhancing PUMS data with GeoParquet PUMAs data {#sec-pums-pumas}
 
-Putting this all together, let's try making a plot[^1] showing different languages spoken throughout the United States.
+Putting this all together, let's try making a plot[^lang-choropleth] showing different languages spoken throughout the United States.
 The analysis we will build up is the percentage of speakers for languages spoken in the US.
 We will then plot this data, subsetting to a few interesting languages depending on what region we are plotting.
-In the PUMS dataset, the smallest geographic area is called a [PUMA (Public Use Microdata Areas)](https://www.census.gov/programs-surveys/geography/guidance/geo-areas/pumas.html).[^3]
+In the PUMS dataset, the smallest geographic area is called a [PUMA (Public Use Microdata Areas)](https://www.census.gov/programs-surveys/geography/guidance/geo-areas/pumas.html).[^pumas-rawr]
 These PUMAs are designed to have approximately 100,000 people in them, and must be within a single state.
 
 As always, we start with our PUMS dataset.
@@ -511,8 +513,8 @@ puma_by_langauge |>
           lwd = 0) +
   coord_sf(crs = "+proj=laea +lon_0=-98 +lat_0=39.5") +
   facet_wrap(vars(language), ncol = 2) +
-  scale_fill_distiller(type = "seq", direction = 1, 
-                       palette = "Greys", 
+  scale_fill_distiller(type = "seq", direction = 1,
+                       palette = "Greys",
                        name = "proportion of speakers") +
   theme_minimal() +
   theme(legend.position = "bottom") +
@@ -596,7 +598,7 @@ This shifts the projection slightly to be as if it were on a globe.
 Making small multiples for each language
 
 ```{.r}
-  scale_fill_distiller(type = "seq", direction = 1, 
+  scale_fill_distiller(type = "seq", direction = 1,
     palette = "Greys", name = "proportion of speakers") +
   theme_minimal() +
   theme(legend.position = "bottom") +
@@ -622,8 +624,8 @@ We've selected slightly different languages for each area to highlight unique di
 puma_by_langauge |>
   filter(language %in% c("english", "spanish", "polish")) |>
   fill_pumas() |>
-  inner_join(PUMA, by = c("year" = "YEAR", 
-                          "location" = "location", 
+  inner_join(PUMA, by = c("year" = "YEAR",
+                          "location" = "location",
                           "PUMA" = "PUMA")) |>
   correct_projection() |>
   ggplot() +
@@ -636,8 +638,8 @@ puma_by_langauge |>
     expand = FALSE
   ) +
   facet_wrap(vars(language), ncol = 3) +
-  scale_fill_distiller(type = "seq", direction = 1, 
-                       palette = "Greys", 
+  scale_fill_distiller(type = "seq", direction = 1,
+                       palette = "Greys",
                        name = "proportion of speakers") +
   theme_minimal() +
   theme(legend.position = "bottom") +
@@ -703,15 +705,15 @@ Or the Northeast, where there are a relatively large proportion of Portugese spe
 #| label: pums-langauge-northeast
 #| eval: false
 puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "french", 
+  filter(language %in% c("english", "spanish", "french",
                          "portuguese")) |>
   fill_pumas() |>
-  inner_join(PUMA, by = c("year" = "YEAR", 
-                          "location" = "location", 
+  inner_join(PUMA, by = c("year" = "YEAR",
+                          "location" = "location",
                           "PUMA" = "PUMA")) |>
   correct_projection() |>
   ggplot() +
-  geom_sf(aes(geometry = geometry, fill = prop_speaker), 
+  geom_sf(aes(geometry = geometry, fill = prop_speaker),
           lwd = 0) +
   coord_sf(
     xlim = c(000000, 650000),
@@ -720,8 +722,8 @@ puma_by_langauge |>
     expand = FALSE
   ) +
   facet_wrap(vars(language), ncol = 4) +
-  scale_fill_distiller(type = "seq", direction = 1, 
-                       palette = "Greys", name = 
+  scale_fill_distiller(type = "seq", direction = 1,
+                       palette = "Greys", name =
                          "proportion of speakers") +
   theme_minimal() +
   theme(legend.position = "bottom") +
@@ -782,8 +784,10 @@ We began talking about user-defined functions (UDFs), explaining how to create a
 We also looked at the interoperability between Arrow and DuckDB, showing how to use DuckDB for tasks not natively supported in Arrow.
 Finally, we took a look at extending arrow, with a focus on geospatial data, introducing the concept of GeoParquet for on-disk geospatial data representation that can quickly and easily be turned into an in-memory representation.
 
-[^1]: This type of plot is called a choropleth where a geographic representation is colored or shaded to show different values in different areas.
+[^lang-choropleth]: This type of plot is called a choropleth where a geographic representation is colored or shaded to show different values in different areas.
 
-[^2]: Without this, some of the Aleutian islands which are to the west of the 180th meridian will be plotted to the east of the rest of the United States.
+[^alaska]: Without this, some of the Aleutian islands which are to the west of the 180th meridian will be plotted to the east of the rest of the United States.
 
-[^3]: There is also a more [detailed description of PUMAs](https://walker-data.com/census-r/introduction-to-census-microdata.html#what-is-a-puma) in Kyle Walker's _Analyzing US Census Data: Methods, Maps, and Models in R_
+[^pumas-rawr]: There is also a more
+[[detailed description of PUMAs](https://walker-data.com/census-r/introduction-to-census-microdata.html#what-is-a-puma) in Kyle Walker's _Analyzing US Census Data: Methods, Maps, and Models in R_]{.content-visible when-format="html"}
+[detailed description of PUMAs in Kyle Walker's _Analyzing US Census Data: Methods, Maps, and Models in R_: https://walker-data.com/census-r/introduction-to-census-microdata.html#what-is-a-puma]{.content-visible when-format="pdf"}
