--- a/cloud.qmd
+++ b/cloud.qmd
@@ -13,7 +13,10 @@ If you want to read a single file directly into memory, you can pass a URL direc
 
 ```{r}
 #| label: read_parquet_url
-read_parquet(system.file("v0.7.1.parquet", package = "arrow"))
+
+read_parquet(
+  "https://github.com/apache/arrow/raw/main/r/inst/v0.7.1.parquet"
+)
 ```
 
 If you want to work with multi-file datasets, however, the HTTP protocol isn't compatible with Arrow's ability to scan files and read metadata before data is accessed to optimize what is eventually pulled into memory upon collecting a query.
@@ -50,9 +53,9 @@ While you can work with compressed CVSs, this solves part of the problem, but no
 
 Many examples will look at working with data hosted on Amazon S3, but the same principles can also be used with data in GCS.
 There are some subtle differences between S3 and GCS which we'll highlight when they come up and outline any differences you need to be aware of.
-In the future, the Apache Arrow project plans to add functionality to work with additional cloud storage services like Azure Blob Storage---this implementation and future ones relating to any other cloud storage services will also follow this model.[^1]
+In the future, the Apache Arrow project plans to add functionality to work with additional cloud storage services like Azure Blob Storage---this implementation and future ones relating to any other cloud storage services will also follow this model.[^azure]
 
-[^1]: At the time of writing, the Arrow C++ library has introduced support for Azure Blob Storage. Users of PyArrow can query datasets on Azure from Python, and once bindings are added to the arrow R package, it will be available from R.
+[^azure]: At the time of writing, the Arrow C++ library has introduced support for Azure Blob Storage. Users of PyArrow can query datasets on Azure from Python, and once bindings are added to the arrow R package, it will be available from R.
 
 In cloud storage terminology, S3 and GCS refer to the place where the data is stored as a **bucket**.  Other systems may use alternative terms, like "blob", but we will use "bucket" here as a generic term.
 
@@ -65,7 +68,7 @@ To open a file or dataset saved in cloud storage, instead of passing in a path t
 #| label: open_parquet_s3
 #| eval: false
 read_parquet(
-  paste0("s3://scaling-arrow-pums/person/year=2005/", 
+  paste0("s3://scaling-arrow-pums/person/year=2005/",
          "location=ak/part-0.parquet")
 )
 open_dataset("s3://scaling-arrow-pums/person/")
@@ -78,7 +81,7 @@ The equivalent of the above commands for GCS---these won't run here as these buc
 #| label: open_parquet_gcs
 #| eval: false
 read_parquet(
-  paste0("gs://anonymous@scaling-arrow-pums/person/year=2005/", 
+  paste0("gs://anonymous@scaling-arrow-pums/person/year=2005/",
          "location=ak/part-0.parquet"
         )
 )
