--- a/files_and_formats.qmd
+++ b/files_and_formats.qmd
@@ -382,7 +382,7 @@ In real use, call `one_state_schema$code()` to use the whole schema.
 #| label: schema-code
 # Print the code needed to create this schema
 one_state_schema[
-  c("RT", "SERIALNO", "DIVISION", "SPORDER", 
+  c("RT", "SERIALNO", "DIVISION", "SPORDER",
     "PUMA", "REGION", "ST")
 ]$code()
 ```
@@ -395,7 +395,7 @@ You can add a new item by assigning a data type to a new item in the schema.
 #| label: add_to_schema
 one_state_schema[["new_var"]] <- float64()
 one_state_schema[
-  c("RT", "SERIALNO", "DIVISION", "SPORDER", 
+  c("RT", "SERIALNO", "DIVISION", "SPORDER",
     "PUMA", "REGION", "ST", "new_var")
 ]
 ```
@@ -404,7 +404,7 @@ To remove items from a schema or select a subset, you can create a new schema co
 
 ```{r}
 #| label: schema_subset
-to_keep <- c("RT", "SERIALNO", "DIVISION", "SPORDER", "PUMA", 
+to_keep <- c("RT", "SERIALNO", "DIVISION", "SPORDER", "PUMA",
              "REGION", "ST", "AGEP", "new_var")
 one_state_schema_mini <- one_state_schema[to_keep]
 one_state_schema_mini
@@ -595,7 +595,7 @@ fraction <- function(n = integer(), d = integer()) {
 
 }
 
-# define a format method for the object 
+# define a format method for the object
 # so we can control how it's printed
 format.fraction <- function(x, ...) {
   paste0(field(x, "numerator"), "/", field(x, "denominator"))
@@ -647,7 +647,7 @@ This preservation of custom attributes and classes is helpful because it means t
 One thing to note is that this preservation of custom attributes works automatically when you write a Parquet file from R and then read it in to R, but it won't work automatically when writing from R and then reading in another language like Python.
 The custom metadata for each language implementation is stored in a separate location for each language.
 So while reading data into Python which has a custom class that was created in R, Arrow won't automatically create that same class.
-However, you still do have access to that metadata under the `metadata` and then `r` attribute if there are details you need to access from Python. 
+However, you still do have access to that metadata under the `metadata` and then `r` attribute if there are details you need to access from Python.
 
 ### File structure and parallelisation
 
@@ -685,7 +685,7 @@ First, let's look at the file size of the Parquet file for Washington in 2021, w
 ```{r}
 #| label: pums-subset-size
 wa_21_path <- paste0(
-  "./data/person/year=2021/location=wa/", 
+  "./data/person/year=2021/location=wa/",
   "part-0.parquet"
 )
 fs::file_size(wa_21_path)
@@ -853,7 +853,7 @@ That is, we'll keep the data in Arrow memory and never pull it into an R data fr
 
 Let's look at the PUMS dataset.
 It is a survey, and it has some features commonly found in surveys that need to be cleaned up.
-For one, the actual row-level data in the survey is encoded based on the type of data it represents.[^1]
+For one, the actual row-level data in the survey is encoded based on the type of data it represents.[^punchcards]
 For columns that are numeric, the data is what is in the data file, but characters, factors, and missing values are recorded as integers.
 <!-- NPR: missing values actually look like empty cells in the CSV, not -1 or whatever -->
 These integers must be mapped to values in the codebook, which is distributed with the data and acts as a lookup for what actual value is represented by the integer in the dataset.
@@ -861,7 +861,7 @@ These integers must be mapped to values in the codebook, which is distributed wi
 For another, the survey questions have changed over time, so data from one year may not line up perfectly with data from other years without some adjustment.
 Many columns in this dataset require transformation to create a nice consistent dataset to work with.
 
-[^1]: Exploring the reasons for this convention is outside of the scope of this book, but it is partly because, historically, folks working with surveys used tools and frameworks that made working with large amounts of data that _wasn't_ numeric difficult.
+[^punchcards]: Exploring the reasons for this convention is outside of the scope of this book, but it is partly because, historically, folks working with surveys used tools and frameworks that made working with large amounts of data that _wasn't_ numeric difficult.
 However, with modern data tools like arrow, we can effectively and efficiently work with data of all types!
 
 Let's start with the `COW` variable, which represents class of worker, categorizing people based on their employment status.
@@ -946,7 +946,7 @@ We can do this with multiple variables at once, and when we're happy with the re
 #| eval: false
 wa_2005 |>
   left_join(
-    filter(codebook, name == "COW"), 
+    filter(codebook, name == "COW"),
     by = c("COW" = "values_code")
   ) |>
   mutate(COW = values_label, .keep = "unused") |>
